# Code2Resume

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: alembic.ini  app.py  database.py  debug_fetch.py  fine_tune_service.py  legacy_app.py  main.py  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  interviews.py  jobs.py  resumes.py  users.py  (+2 more)
backend/config/: settings.py
backend/models/: llm_handler.py  user.py
backend/scripts/: seed.py
backend/services/: agent_service.py  context_compressor.py  github_service.py  hybrid_retriever.py  indexing_pipeline.py  intent_detector.py  knowledge_graph.py  llm_service.py  project_classifier.py  project_search.py  project_summarizer.py  prompt_builder.py  rag_service.py  reranker.py  resume_engine.py  resume_generator.py  retrieval_metrics.py  token_counter.py
backend/templates/: resume_modern.tex.j2  resume_professional.tex.j2  resume_student.tex.j2
docs/: FINETUNING_GUIDE.md  PROJECT_STRUCTURE.md  REACT_MIGRATION_GUIDE.md  RESTRUCTURING_SUMMARY.md  SETUP_GUIDE.md  VERIFICATION_CHECKLIST.md  WINDOWS_GUIDE.md
frontend-react/: README.md  index.html  package-lock.json  package.json
frontend-react/src/: App.jsx  index.css
scripts/: check_training.bat  check_training.sh  clear_db.py  init_db.py  install_finetune_deps.bat  install_finetune_deps.sh  run.bat  run.sh  run_finetune.bat  run_finetune.sh  run_finetune_safe.bat  run_finetune_safe.sh  setup.bat  setup.sh  start-fullstack.bat  start-fullstack.sh  start.bat  start.sh  start_ollama.bat  start_ollama.sh
(+101 files in other folders)
