[project]
name = "code2resume"
version = "0.1.0"
description = "Code2Resume: GitHub to Resume/Portfolio Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "GitPython>=3.1.43",
    "ollama>=0.4.0",
    "openai>=1.55.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "numpy<2.0.0",
    "bcrypt>=4.2.0",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.24.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = []
